# booksyCORSproxy

./: .dockerignore  .gitignore  Dockerfile  README.md
booksyAPI/: pyproject.toml  setup.py
booksyAPI/booksyAPI/: __init__.py  views.py
booksyAPI/src/booksyCORSproxy/: __init__.py  __main__.py  views.py
booksyCORSproxy/: pyproject.toml
booksyCORSproxy/src/booksyCORSproxy/: __init__.py  views.py
sample/: Dockerfile  booksyProxy.env  docker-compose.yml
sample/ex-JSON/: samplereviews.txt
sample/ex-conf/: httpd-revproxy.conf  httpd-samplesite.conf  httpd-vhosts.conf
sample/ex-conf/ssl/: server.crt  server.csr  server.key
sample/ex-site/: booksyreviews.js  index.html
